# codal-arduino-uno

./: CMakeLists.txt  target-locked.json  target.json
asm/: AVRContextSwitch.S
model/: ArduinoIO.cpp  ArduinoIO.h  ArduinoUno.cpp  ArduinoUno.h
samples/blinky/: main.cpp
source/: codal_target_hal.cpp
